--- a/.github/workflows/push-check.yml
+++ b/.github/workflows/push-check.yml
@@ -34,6 +34,11 @@ jobs:
           go install mvdan.cc/gofumpt@v0.2.0
           test -z "$(gofumpt -l -extra .)" 
 
+      - name: Prepare Consul
+        run: |
+          make prepare
+          sleep 5
+
       - name: Unit Test
         run: go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
 
